# PSP2-CustomBootSplash

./: CMakeLists.txt  README.md
src/: main.c
